# opiform

./: .gitignore  LICENSE.txt  README.md
src/: CMakeLists.txt
src/Agent/: AgentBase.cpp  AgentBase.h  AgentInconsistent.cpp  AgentInconsistent.h  AgentStubborn.cpp  AgentStubborn.h
src/Game/: Game.cpp
src/Main/: main.cpp
src/Network/: NetworkAbstract.h  NetworkCM.cpp  NetworkCM.h  NetworkER.h  NetworkFC.cpp  NetworkFC.h  NetworkSW.cpp
src/Utils/: DecisionMaking.h  OpinionFormationModels.h  Writer.cpp  Writer.h
src/cmake/: opiform.cmake
src/demo/: CMakeLists.txt  main.cpp
src/opiform/: CMakeLists.txt
src/opiform/Agent/: AgentBase.cpp  AgentBase.h  AgentInconsistent.cpp  AgentInconsistent.h  AgentStubborn.cpp  AgentStubborn.h
src/opiform/Game/: Game.cpp  Game.h  ProcessDynamicsBase.cpp  ProcessDynamicsBase.h  ProcessDynamicsCont.cpp  ProcessDynamicsCont.h  ProcessDynamicsOLG.cpp  ProcessDynamicsOLG.h  ProcessDynamicsReset.cpp  ProcessDynamicsReset.h
src/opiform/Network/: NetworkAbstract.cpp  NetworkAbstract.h  NetworkBA.cpp  NetworkBA.h  NetworkCM.cpp  NetworkCM.h  NetworkER.cpp  NetworkER.h  NetworkFC.cpp  NetworkFC.h  NetworkSW.cpp  NetworkSW.h  NetworkSWAge.cpp  NetworkSWAge.h
src/opiform/Pairing/: agent.cpp  agent.h  roommate.cpp  roommate.h
src/opiform/Utils/: DecisionMaking.cpp  DecisionMaking.h  Opinion.cpp  Opinion.h  OpinionFormationModels.cpp  OpinionFormationModels.h  OpinionUpdating.cpp  OpinionUpdating.h  Pairing.cpp  Pairing.h  PoliticalView.cpp  PoliticalView.h  RankingModel.cpp  RankingModel.h  Stats.cpp  Stats.h  Writer.cpp  Writer.h  constants.cpp  constants.h  types.h
src/tests/: CMakeLists.txt  main.cpp
